Baobab guide finished

--- a/Baobab/data_and_tips_section.tex
+++ b/Baobab/data_and_tips_section.tex
@@ -6,29 +6,30 @@
 >{\columncolor[HTML]{FFFFFF}}l |
 >{\columncolor[HTML]{FFFFFF}}c |}
 \hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Material}}   & Baobab   \\ \hline
-	\textbf{Temperatura}                         & 200      \\ \hline
-	\textbf{Colores}                         & 16      \\ \hline
-	\textbf{Velocidad}                         & 50      \\ \hline
-
+\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Material}}   & PLA con partículas de madera   \\ \hline
+	\textbf{Densidad}                         & 0.93 g/cm3      \\ \hline
+	\textbf{Temperatura de deflexión térmica}                         & 70ºc      \\ \hline
+	\textbf{Temperatura de fusión}                         & 160ºc      \\ \hline
+	\textbf{Temperatura de descomposicion}                         & \textgreater 270º c      \\ \hline
+	\textbf{Elongación máxima}                         & 40\%      \\ \hline
 \end{tabular}
 \end{table}
 \begin{table}[H]
 \centering
-\caption*{Parámetros de impresión recomendados usando un nozzle de 0.4 mm}
+\caption*{Parámetros de impresión recomendados}
 \begin{tabular}{|
 >{\columncolor[HTML]{FFFFFF}}l |
 >{\columncolor[HTML]{FFFFFF}}c |}
 \hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Material}} & Baobab              \\ \hline
-	\textbf{Temperatura}                         & 200      \\ \hline
-	\textbf{Colores}                         & 16      \\ \hline
-	\textbf{Velocidad}                         & 50      \\ \hline
+\multicolumn{1}{|l|}{\cellcolor[HTML]{FFFFFF}\textbf{Diámetro de nozzle recomendado}} & 0.6 mm              \\ \hline
+	\textbf{Temperatura recomendada (hot-end)}                         & 200ºc      \\ \hline
+	\textbf{Temperatura recomendada (cama caliente)}                         & 40º - No necesita      \\ \hline
+	\textbf{Velocidad recomendada de impresión}                         & 80 mm/s      \\ \hline
+	\textbf{Distancia de retracción}                         & Depende del hot-end (Entre 4 y 20 mm)      \\ \hline
+	\textbf{Velocidad de retracción}                         & La máxima soportada (Entre 50 y 100 mm/s)      \\ \hline
 \end{tabular}
 \end{table}
-
-Puedes descargarte nuestros perfiles completos de impresión de los principales programas de laminación (Cura, Slic3r y Simplify3D) desde nuestra página web:
-\\\\
+Puedes descargarte nuestros perfiles completos de impresión de los principales programas de laminación (Cura, Slic3r y Simplify3D) desde nuestra página web:\\\\
 \centerline{ {\huge \url{www.fffworld.com/documentation} } }
 \\\\
-Los parámetros óptimos dependerán de la impresora 3D que utilices, sin embargo, son unos buenos parámetros para tenerlos como punto de partida. Con unas pocas impresiones serás capaz de encontrar los límites y la configuración perfecta para tu maquina.
+Los parámetros óptimos dependerán de la impresora 3D que utilices, sin embargo, son unos buenos parámetros para tenerlos como punto de partida. Con unas pocas impresiones serás capaz de encontrar los lmites y la configuración perfecta para tu maquina.
